--- a/UI/res/values/strings.xml
+++ b/UI/res/values/strings.xml
@@ -16,9 +16,18 @@
     <!-- MainActivity -->
 	<string name="function_null">Function null...</string>
 	<string name="function_error">Function errot...</string>
-	
-		<string name="phone_or_email">手机或邮箱</string>
-	<string name="password">密码</string>
-	<string name="string_return">返回</string>
-	<string name="string_thirder_login">第三方登录</string>
+
+	<string name="string_return">Return</string>
+	<string name="password">Password</string>
+	<string name="phone_or_email">Phone or email</string>
+	<string name="string_register">Register</string>
+    <string name="string_login">Login</string>
+    <string name="string_thirder_login">Third party landing</string>
+    
+    <string name="string_phone_pre">China (+86)</string>
+    <string name="string_get_phone_verification">Get verification code</string>
+    <string name="string_input_phonenumber">Please enter your phone number.</string>
+    <string name="string_input_verificationnumber">Verification code</string>
+    <string name="string_input_pwd">Set password</string>
+    <string name="string_input_pwd_confirm">Please enter your password again.</string>
 </resources>
